add csv construct

--- a/index.html
+++ b/index.html
@@ -966,10 +966,10 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
 </head>
 
 <body>
-<div id="61f3b949d34b4572a9493481bf668e28" style="width:800px;height:300px;"></div>
+<div id="d76ad85b419e46a09beed73c70ca1921" style="width:800px;height:300px;"></div>
 <script type="text/javascript">
-    var myChart_61f3b949d34b4572a9493481bf668e28 = echarts.init(document.getElementById('61f3b949d34b4572a9493481bf668e28'));
-    var option_61f3b949d34b4572a9493481bf668e28 = {
+    var myChart_d76ad85b419e46a09beed73c70ca1921 = echarts.init(document.getElementById('d76ad85b419e46a09beed73c70ca1921'));
+    var option_d76ad85b419e46a09beed73c70ca1921 = {
     "title": [
         {
             "text": "Workloada",
@@ -997,7 +997,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             }
         }
     },
-    "_index_flag": 1265448,
+    "_index_flag": 1357083,
     "tooltip": {},
     "series": [
         {
@@ -1043,7 +1043,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1265448
+            "indexflag": 1357083
         },
         {
             "type": "line",
@@ -1088,7 +1088,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1265448
+            "indexflag": 1357083
         }
     ],
     "legend": [
@@ -1173,12 +1173,12 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         "#f6f5ec"
     ]
 };
-    myChart_61f3b949d34b4572a9493481bf668e28.setOption(option_61f3b949d34b4572a9493481bf668e28);
+    myChart_d76ad85b419e46a09beed73c70ca1921.setOption(option_d76ad85b419e46a09beed73c70ca1921);
 </script>
-<div id="27c417b1fbf9447aaf170b359114f2c2" style="width:800px;height:300px;"></div>
+<div id="466fd9cb3fe4454e86679de9cfb13822" style="width:800px;height:300px;"></div>
 <script type="text/javascript">
-    var myChart_27c417b1fbf9447aaf170b359114f2c2 = echarts.init(document.getElementById('27c417b1fbf9447aaf170b359114f2c2'));
-    var option_27c417b1fbf9447aaf170b359114f2c2 = {
+    var myChart_466fd9cb3fe4454e86679de9cfb13822 = echarts.init(document.getElementById('466fd9cb3fe4454e86679de9cfb13822'));
+    var option_466fd9cb3fe4454e86679de9cfb13822 = {
     "title": [
         {
             "text": "Workloada",
@@ -1206,7 +1206,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             }
         }
     },
-    "_index_flag": 1270991,
+    "_index_flag": 957189,
     "tooltip": {},
     "series": [
         {
@@ -1252,7 +1252,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1270991
+            "indexflag": 957189
         },
         {
             "type": "line",
@@ -1297,7 +1297,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
             "markLine": {
                 "data": []
             },
-            "indexflag": 1270991
+            "indexflag": 957189
         }
     ],
     "legend": [
@@ -1382,7 +1382,7 @@ radiusToData:a.prototype.coordToData},o.inherits(n,a),t.exports=n},function(t,e,
         "#f6f5ec"
     ]
 };
-    myChart_27c417b1fbf9447aaf170b359114f2c2.setOption(option_27c417b1fbf9447aaf170b359114f2c2);
+    myChart_466fd9cb3fe4454e86679de9cfb13822.setOption(option_466fd9cb3fe4454e86679de9cfb13822);
 </script>
 
 </body>
